--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
   <string name="details_price">Current price</string>
   <string name="details_change">Absolute change</string>
   <string name="details_percentage">%</string>
+
+  <!--Widget-->
+  <string name="widget_no_stock">No stocks</string>
 </resources>
