[Strings] Update strings.xml and content description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,44 +1,67 @@
 <resources>
-  <string name="app_name">Stock Hawk</string>
+  <string name="app_name"
+      translatable="false">Stock Hawk</string>
 
   <string name="pref_stocks_initialized_key"
       translatable="false">initialized</string>
+  <string name="pref_stocks_key"
+      translatable="false">stocks</string>
+  <string name="pref_display_mode_key"
+      translatable="false">displayMode</string>
+  <string name="pref_display_mode_default"
+      translatable="false">@string/pref_display_mode_percentage_key</string>
+  <string name="pref_display_mode_absolute_key"
+      translatable="false">absolute</string>
+  <string name="pref_display_mode_percentage_key"
+      translatable="false">percentage</string>
 
-  <string name="pref_stocks_key">stocks</string>
+  <string name="default_stocks_yahoo"
+      translatable="false">YHOO</string>
+  <string name="default_stocks_apple"
+      translatable="false">AAPL</string>
+  <string name="default_stocks_microsoft"
+      translatable="false">MSFT</string>
+  <string name="default_stocks_facebook"
+      translatable="false">FB</string>
+  <string name="default_price"
+      translatable="false">1000.00</string>
+  <string name="default_change"
+      translatable="false">100%</string>
 
+  <string name="action_change_units"
+      translatable="false">@string/pref_display_mode_key</string>
 
-  <string name="pref_display_mode_key">displayMode</string>
-  <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>
+  <string name="prefix_dollar"
+      translatable="false">+$</string>
+  <string name="prefix_plus"
+      translatable="false">+</string>
 
-  <string name="pref_display_mode_absolute_key">absolute</string>
-  <string name="pref_display_mode_percentage_key">percentage</string>
-
-  <string name="default_stocks_yahoo">YHOO</string>
-  <string name="default_stocks_apple">AAPL</string>
-  <string name="default_stocks_microsoft">MSFT</string>
-  <string name="default_stocks_facebook">FB</string>
-
-
-  <string name="action_change_units">@string/pref_display_mode_key</string>
-
-
+  <!--Dialog-->
   <string name="dialog_title">Add Stock</string>
   <string name="dialog_hint">Symbol (e.g. GOOG)</string>
   <string name="dialog_cancel">Cancel</string>
   <string name="dialog_add">Add</string>
 
+  <!--Error-->
   <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
   <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
-  <string name="error_no_stock_exits">No stock exits</string>
+  <string name="error_no_stock_exits">No stock exits: </string>
 
+  <!--Toast-->
   <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
   <string name="toast_no_connectivity">Will refresh when network available.</string>
+
+  <!--Main-->
+  <string name="main_description_fab">Add stock</string>
 
   <!--Details-->
   <string name="details_price">Current price</string>
   <string name="details_change">Absolute change</string>
-  <string name="details_percentage">%</string>
+  <string name="details_percentage"
+      translatable="false">%</string>
 
   <!--Widget-->
   <string name="widget_no_stock">No stocks</string>
+  <string name="widget_resource_background"
+      translatable="false">setBackgroundResource</string>
 </resources>
