[RTL] RTL supports layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
   <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
   <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
   <string name="error_no_stock_exits">No stock exits: </string>
+  <string name="error_message">Error message</string>
 
   <!--Toast-->
   <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
